--- a/styles/footer.css
+++ b/styles/footer.css
@@ -8,3 +8,25 @@ footer{
 footer span:nth-child(1){
 margin-right: auto;
 }
+
+
+@media(width <= 768px){
+    footer{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    .mobile-footer span{
+        margin-left: 10px;
+
+    }
+
+    #footer{
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+    }
+    
+}
