--- a/styles/header.css
+++ b/styles/header.css
@@ -47,3 +47,18 @@ header .container-header{
     align-items: center;
     gap: 8px;
 }
+
+@media (width <= 768px){
+    header{
+        flex-direction: column;
+    }
+
+    #profile{
+        padding-left: 40px;
+    }
+
+    #info{
+        margin-right: auto;
+    }
+
+}
